--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "armangle"
-version = "0.1.1"
+version = "0.2.0"
 description = "Compute the arm angle of a pitch from publicly available release point and shoulder data"
 readme = "README.md"
 authors = [
@@ -10,12 +10,8 @@ requires-python = ">=3.12"
 dependencies = [
     "joblib>=1.4.2",
     "loguru>=0.7.3",
-    "optuna>=4.2.1",
-    "polars>=1.26.0",
     "pydantic-settings>=2.8.1",
     "pydantic>=2.8.2",
-    "pygam>=0.9.1",
-    "scikit-learn>=1.6.1",
 ]
 
 [build-system]
@@ -26,4 +22,10 @@ build-backend = "hatchling.build"
 dev = [
     "aider-chat>=0.43.3",
     "ruff>=0.11.2",
+]
+train = [
+    "optuna>=4.2.1",
+    "polars>=1.26.0",
+    "pygam>=0.9.1",
+    "scikit-learn>=1.6.1",
 ]
